--- a/.github/workflows/create.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create.webapp-container-sql-backend.yaml
@@ -18,7 +18,7 @@ on: workflow_dispatch
 #
 # Set up the following secrets in your repository:
 #   AZURE_CREDENTIALS, SQL_SERVER_ADMIN_PASSWORD
-# 2. Change these variables for your configuration:
+# 2. Change these variables for your configuration (and keep these in sync with the build-deploy.webapp-container-sql-backend.yaml workflow):
 env:
   AZURE_RESOURCE_GROUP: rsg-todo-sample   # target resource, must match the {resource-group-name} you setup in the pre-requisties
   WEB_APP_NAME: app-todo-sample           # set the name for the Web App on Azure
@@ -29,7 +29,7 @@ env:
   SQL_DB_NAME: todoDb                     # set the name for the Azure SQL Database
 
 jobs:
-  deploy_resources:
+  deploy_arm_templates:
     runs-on: ubuntu-latest
     steps:
     - name: Get ARM Templates
