--- a/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
@@ -151,7 +151,7 @@ jobs:
               "slotSetting": false
             }
           ]
-        connection-string-settings: |
+        connection-strings-json: |
           [
             {
               "name": "MyDbConnection",
