--- a/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
+++ b/.github/workflows/create-build-deploy.webapp-container-sql-backend.yaml
@@ -93,15 +93,15 @@ jobs:
         echo "Build image and push to ${{ env.ACR_LOGIN_SERVER }}"
 
         echo "Building the container..."
-        docker build -t todo-sample:latest .
+        docker build -t todo-sample:${{ github.sha }} .
         echo
 
         echo "Tagging for azure container registry"
-        docker tag todo-sample ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest
+        docker tag todo-sample ${{ env.ACR_LOGIN_SERVER }}/todo-sample:${{ github.sha }}
         echo
 
         echo "Push image"
-        docker push ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest
+        docker push ${{ env.ACR_LOGIN_SERVER }}/todo-sample:${{ github.sha }}
         echo
 
         echo "Repositories in the container registry"
@@ -165,7 +165,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.WEB_APP_NAME }} 
-        images: ${{ env.ACR_LOGIN_SERVER }}/todo-sample:latest
+        images: ${{ env.ACR_LOGIN_SERVER }}/todo-sample:${{ github.sha }}
         slot-name: staging
         
     - name: Update Database
