Repo Reorganization and ARM templates

--- a/.github/workflows/build-azuredeploy.yaml
+++ b/.github/workflows/build-azuredeploy.yaml
@@ -2,6 +2,8 @@ name: Create, Build and Deploy Docker WebApp with Azure SQL
 
 on: 
   push:
+    paths-ignore:
+    - 'infrastructure/**'
   workflow_dispatch:
 
 # Pre-Requisites
@@ -33,13 +35,6 @@ jobs:
   create_build_deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Get ARM Templates
-      uses: actions/checkout@v2
-      with:
-        repository: ralarcon/reference-architectures  ## TODO: Point to the official reference-architectures repo
-        ref: container-web-app                        ## TODO: Remove branch reference once published
-        path: reference-architectures
-
     - name: Login for az cli commands 
       uses: azure/login@v1
       with:
@@ -56,7 +51,7 @@ jobs:
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
-        template: reference-architectures/managed-web-app/containerized-web-app/PaaS-Containerized/Templates/PaaS-Containerized.json
+        template: infrastructure/azuredeploy.json
         parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: gha-deployment-${{ github.run_id }}-${{ github.run_number }}
 
@@ -182,5 +177,3 @@ jobs:
       run: |
         az webapp deployment slot swap --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.WEB_APP_NAME }} --slot staging --target-slot production
         echo "Swap finished. WebApp accessible at https://$(az webapp show --resource-group rsg-todo-sample --name app-todo-sample --query hostNames[0] -o tsv)"
-
-    
