--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -32,6 +32,11 @@ jobs:
   deploy_arm_templates:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout Source Code
+      uses: actions/checkout@v2
+      with:
+        path: main
+            
     - name: Login for az cli commands 
       uses: azure/login@v1
       with:
