--- a/.github/workflows/build-azuredeploy.yaml
+++ b/.github/workflows/build-azuredeploy.yaml
@@ -62,7 +62,7 @@ jobs:
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
-        template: ${{env.GITHUB_WORKSPACE}}/infrastructure/azuredeploy.json
+        template: ${{ github.workspace }}/infrastructure/azuredeploy.json
         parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: gha-deployment-${{ github.run_id }}-${{ github.run_number }}
       
@@ -107,7 +107,7 @@ jobs:
 
         echo "Repositories in the container registry"
         az acr repository list -n ${{ env.ACR_LOGIN_SERVER }}        
-      working-directory: ${{env.GITHUB_WORKSPACE}}/application
+      working-directory: ${{ github.workspace }}/application
       
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -177,7 +177,7 @@ jobs:
       env:
         ASPNETCORE_ENVIRONMENT: Development
         ConnectionStrings__MyDbConnection: ${{ env.SQL_DB_CONN_STR }}
-      working-directory: ${{env.GITHUB_WORKSPACE}}/application
+      working-directory: ${{ github.workspace }}/application
 
     - name: Swap to production slot
       run: |
