--- a/.github/workflows/build-azuredeploy.yaml
+++ b/.github/workflows/build-azuredeploy.yaml
@@ -37,8 +37,6 @@ jobs:
     steps:
     - name: Checkout Source Code
       uses: actions/checkout@v2
-      with:
-        path: main
 
     - name: ECHO
       run: |
@@ -62,7 +60,7 @@ jobs:
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
-        template: ${{ github.workspace }}/infrastructure/azuredeploy.json
+        template: infrastructure/azuredeploy.json
         parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: gha-deployment-${{ github.run_id }}-${{ github.run_number }}
       
@@ -107,7 +105,7 @@ jobs:
 
         echo "Repositories in the container registry"
         az acr repository list -n ${{ env.ACR_LOGIN_SERVER }}        
-      working-directory: ${{ github.workspace }}/application
+      working-directory: application
       
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -177,7 +175,7 @@ jobs:
       env:
         ASPNETCORE_ENVIRONMENT: Development
         ConnectionStrings__MyDbConnection: ${{ env.SQL_DB_CONN_STR }}
-      working-directory: ${{ github.workspace }}/application
+      working-directory: application
 
     - name: Swap to production slot
       run: |
