--- a/.github/workflows/build-azuredeploy.yaml
+++ b/.github/workflows/build-azuredeploy.yaml
@@ -1,4 +1,4 @@
-name: Create, Build and Deploy Docker WebApp with Azure SQL
+name: Update Infrastructure & Deploy Version
 
 on: 
   push:
@@ -26,6 +26,7 @@ env:
   AZURE_RESOURCE_GROUP: rsg-todo-sample   # target resource, must match the {resource-group-name} you setup in the pre-requisties
   WEB_APP_NAME: app-todo-sample           # set the name for the Web App on Azure
   ACR_NAME: crtodosample                  # set the name for the Azure Container Registry
+  CONTAINER_IMAGE_NAME: todo-sample       # set the name for the container image
   SQL_SERVER_NAME: sql-todo-sample        # set the name for the Azure SQL Server
   SQL_SERVER_ADMIN_LOGIN: dbadminlogin    # set the name for the Azure SQL Server admin login
   SQL_SERVER_ADMIN_PASSWORD: ${{ secrets.SQL_SERVER_ADMIN_PASSWORD }}  # password for the Azure SQL Sever admin login -> must be in the secrets
@@ -38,12 +39,6 @@ jobs:
     - name: Checkout Source Code
       uses: actions/checkout@v2
 
-    - name: ECHO
-      run: |
-        echo "${{ github.workspace }}"
-        echo "${{ github.workspace }}"
-        ls -lar ${{ github.workspace }}
-        
     - name: Login for az cli commands 
       uses: azure/login@v1
       with:
@@ -55,13 +50,37 @@ jobs:
         echo "AZURE_SUBSCRIPTION_ID=$CURRENT_SUBSCRIPTION_ID" >> $GITHUB_ENV
         echo "Current SubscriptionId: $CURRENT_SUBSCRIPTION_ID"
 
+    - name: "Check if container image exists"
+      run: |
+        echo "Checks if the container image already exists to avoid the ARM deployment change the existing image if it is already deployed"
+        echo "If the container registry or the container image does not exists, it sets a default container image"
+
+        DEFAULT_CONTAINER_IMAGE="DOCKER|mcr.microsoft.com/dotnet/core/samples:aspnetapp"
+        echo "Setting default container image: $DEFAULT_CONTAINER_IMAGE"
+        echo "CONTAINER_IMAGE=$DEFAULT_CONTAINER_IMAGE" >> $GITHUB_ENV
+
+        ACR=$(az acr list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query "[?name=='${{ env.ACR_NAME }}'].name" -o tsv)
+        if [ $ACR -ne "" ]; then
+          echo "Azure Container Registry Exist: $ACR"
+          IMAGE = $(az acr repository show -n ${{ env.ACR_NAME }} --repository ${{ env.CONTAINER_IMAGE_NAME }} --query imageName -o tsv | "")
+          if [ $IMAGE -ne "" ]; then
+            echo "Image: $IMAGE"
+
+            LOGIN_SERVER=$(az acr show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.ACR_NAME }} --query loginServer -o tsv)
+            LATEST_TAG=$(az acr repository show-manifests -n ${{ env.ACR_NAME }} --repository ${{ env.CONTAINER_IMAGE_NAME }} --orderby time_desc --query [0].tags[0] -o tsv)
+            EXISTING_IMAGE="DOCKER|$LOGIN_SERVER/$IMAGE:$TAG"
+            echo "Setting existing container image: $EXISTING_IMAGE"
+            echo "CONTAINER_IMAGE=$EXISTING_IMAGE" >> $GITHUB_ENV
+          fi
+        fi
+
     - name: Deploy ARM templates
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
         resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: infrastructure/azuredeploy.json
-        parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
+        parameters: webSiteName=${{ env.WEB_APP_NAME }} containerRegistryName=${{ env.ACR_NAME }} containerImage=${{ env.CONTAINER_IMAGE }} sqlServerName=${{ env.SQL_SERVER_NAME }} dbAdminLogin=${{ env.SQL_SERVER_ADMIN_LOGIN }} dbAdminLoginPassword=${{ env.SQL_SERVER_ADMIN_PASSWORD }} dbName=${{ env.SQL_DB_NAME }}
         deploymentName: gha-deployment-${{ github.run_id }}-${{ github.run_number }}
       
     - name: Get ACR Info & Database Connection
@@ -92,15 +111,15 @@ jobs:
         echo "Build image and push to ${{ env.ACR_LOGIN_SERVER }}"
 
         echo "Building the container..."
-        docker build -t todo-sample:${{ github.sha }} .
+        docker build -t ${{ env.CONTAINER_IMAGE_NAME }}:${{ github.sha }} .
         echo
 
         echo "Tagging for azure container registry"
-        docker tag todo-sample:${{ github.sha }} ${{ env.ACR_LOGIN_SERVER }}/todo-sample:${{ github.sha }}
+        docker tag ${{ env.CONTAINER_IMAGE_NAME }}:${{ github.sha }} ${{ env.ACR_LOGIN_SERVER }}/${{ env.CONTAINER_IMAGE_NAME }}:${{ github.sha }}
         echo
 
         echo "Push image"
-        docker push ${{ env.ACR_LOGIN_SERVER }}/todo-sample:${{ github.sha }}
+        docker push ${{ env.ACR_LOGIN_SERVER }}/${{ env.CONTAINER_IMAGE_NAME }}:${{ github.sha }}
         echo
 
         echo "Repositories in the container registry"
@@ -164,7 +183,7 @@ jobs:
       uses: azure/webapps-deploy@v2
       with: 
         app-name: ${{ env.WEB_APP_NAME }} 
-        images: ${{ env.ACR_LOGIN_SERVER }}/todo-sample:${{ github.sha }}
+        images: ${{ env.ACR_LOGIN_SERVER }}/${{ env.CONTAINER_IMAGE_NAME }}:${{ github.sha }}
         slot-name: staging
         
     - name: Update Database
@@ -180,4 +199,4 @@ jobs:
     - name: Swap to production slot
       run: |
         az webapp deployment slot swap --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.WEB_APP_NAME }} --slot staging --target-slot production
-        echo "Swap finished. WebApp accessible at https://$(az webapp show --resource-group rsg-todo-sample --name app-todo-sample --query hostNames[0] -o tsv)"
+        echo "Swap finished. WebApp accessible at https://$(az webapp show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.WEB_APP_NAME }} --query hostNames[0] -o tsv)"
