put app in the correct image path

--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -55,10 +55,10 @@ jobs:
         echo "Default container image: $DEFAULT_CONTAINER_IMAGE"
         echo "CONTAINER_IMAGE=$DEFAULT_CONTAINER_IMAGE" >> $GITHUB_ENV
 
-
         WEB_APP=$(az webapp list --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --query "[?name=='${{ env.WEB_APP_NAME }}'].name" -o tsv)
         if [ -n "$WEB_APP" ]; then
           EXISTING_IMAGE=$(az webapp config show --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.WEB_APP_NAME }} --query linuxFxVersion -o tsv)
+          echo "The webapp already exists. The existing container image will be used."
           echo "Setting existing container image: $EXISTING_IMAGE"
           echo "CONTAINER_IMAGE=$EXISTING_IMAGE" >> $GITHUB_ENV
         fi
